# aws-credentials

./: .gitignore  Cargo.toml  README.md
src/: basic_credentials.rs  container_credentials.rs  credential_provider.rs  errors.rs  lib.rs
